Fixed spacing issue.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 * {
     font-family: 'Work Sans', sans-serif;
+    box-sizing: border-box;
 }
 
 .d-none {
@@ -33,7 +34,7 @@ h1, h2, h3 {
 header {
     width: 100%;
     background-color: #0870B8;
-    padding: 15px;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
